<resources>
    <string name="app_name" translatable="false">Sabzi@door</string>
    <string name="app_name_title" translatable="false">Sabzi@Door</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="action_search" translatable="false">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_location">Navarangpura, Ahmedabad</string>
    <string name="nav_healding_myiformatio">My Information</string>
    <string name="nav_item_Login">Login</string>
    <string name="nav_item_address">My Addresses</string>
    <string name="nav_item_order">My Orders</string>
    <string name="nav_item_cart">My Cart</string>
    <string name="btn_add">ADD</string>
    <string name="nav_item_notification">Notification center</string>
    <string name="nav_heading_others">Others</string>
    <string name="nav_item_help">Help</string>
    <string name="nav_item_callus">Call Us</string>
    <string name="nav_item_rateus">Rate Us</string>
    <string name="nav_item_share">Share</string>
    <string name="nav_item_about">About Sabzi@Door</string>
    <string name="nav_item_logout">Logout</string>
    <string name="lbl_refer_a_friend">Refer a Friend</string>
    <string name="lbl_friend_name">Enter friend name</string>
    <string name="lbl_friend_mobil">Enter mobile no.</string>
    <string name="lbl_refer">Refer</string>
    <string name="lbl_add_address">Add Address</string>
    <string name="lbl_aboutus">About this app</string>
    <string name="lbl_add_name">Full Name</string>
    <string name="lbl_add_house_no">Flat/House No </string>
    <string name="lbl_add_street">Street/Society/Office Name</string>
    <string name="lbl_add_area">Area/Landmark</string>
    <string name="lbl_add_city">City/State</string>
    <string name="lbl_add_zip_code">Zip Code</string>
    <string name="lbl_please_enter_phone">Please enter your phone number in order to continue shopping</string>
    <string name="lbl_phone_number">Phone Number</string>
    <string name="lbl_phone_prefix">+91</string>
    <string name="lbl_sms_waiting">Waiting to detect a SMS code sent to </string>
    <string name="lbl_Or">OR</string>
    <string name="lbl_manual_code_enter">You can enter the code manually</string>
    <string name="lbl_enter_code">Enter Code</string>
    <string name="lbl_resend_verification">Resend code</string>
    <string name="lbl_resend_success">Verification code sent successfully</string>
    <string name="lbl_resend_fail">Verification code request fail!!!</string>
    <string name="lbl_user_verfication_success">User verifed successfully</string>
    <string name="lbl_user_verfication_fail">User verification fail!!!</string>
    <string name="lbl_promocode_minimum_validation">Promocode is valid only on minimum purchase of \u20B9%1$s</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_add_create">Add Address</string>
    <string name="lbl_add_logout">Logout</string>
    <string name="lbl_sub_total">Sub Total</string>
    <string name="lbl_delivery_charges">Delivery Charges</string>
    <string name="lbl_promo_code_discount">Promo Code Discount</string>
    <string name="lbl_free">Free</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="lbl_apply_promo_code_hint">Enter Promo Code</string>
    <string name="lbl_apply_promo_code_button">Apply Promo Code</string>
    <string name="lbl_invalid_promo_code">Invalid promo code</string>
    <string name="lbl_promo_apply">Apply</string>
    <string name="lbl_promo_cancel">Cancel</string>
    <string name="lbl_today">Today</string>
    <string name="lbl_tomorrow">Tomorrow</string>
    <string name="lbl_dayafter">Day After</string>
    <string name="lbl_back">Back</string>
    <string name="lbl_add_another_address">Add Address</string>
    <string name="lbl_place_order">Place Order</string>
    <string name="lbl_zero">0</string>
    <string name="lbl_time">04:30 PM</string>
    <string name="lbl_title_check_out">Check Out</string>
    <string name="lbl_checkout">CheckOut</string>
    <string name="lbl_network_connection_fail">Network connection fail!!</string>
    <string name="lbl_title_add_address">Add Address</string>
    <string name="lbl_title_verifying_phone">Verifying Phone</string>
    <string name="lbl_title_login">Login or Signup</string>
    <string name="lbl_title_choose_address">Choose Address</string>
    <string name="lbl_title_my_order">My Order</string>
    <string name="lbl_title_order_details">Order Details</string>
    <string name="lbl_order_success">Order Successfully Placed</string>
    <string name="lbl_schedule_date">Scheduled Delivery Date and Time</string>
    <string name="lbl_note">Note</string>
    <string name="lbl_out_stock_msg">Out of stock items, will be delivered tomorrow</string>
    <string name="lbl_delivery_date_time">Preferred Delivery Date and Time</string>
    <string name="lbl_check_order">Check Order Status</string>
    <string name="lbl_continue_shopping">Countinue Shopping</string>
    <string name="lbl_thanks">Thank you</string>
    <string name="lbl_welome">Welcome</string>
    <string name="lbl_welome_message">Welcome to Sabzi@Door</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_code">Code:</string>
    <string name="lbl_tap_to_copy">Tap to copy</string>
    <string name="lbl_about_us_title">About Us</string>
    <string name="lbl_privacy_policy_title">Privacy Policy</string>
    <string name="lbl_terms_condition_title">Terms &amp; Condition</string>
    <string name="lbl_title_notification">Subji@Door</string>
    <string name="lbl_term_service">By using this application, you agree to the Terms of Service and Privacy Policy</string>
</resources>