<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <include
        android:id="@+id/toolbar"
        layout="@layout/top_bar_address" />

    <ListView
        android:id="@+id/myCartListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/bottomBarMyCart"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@android:color/holo_green_light"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingStart="12dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_checkout"
            android:textColor="#FFF"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/priceTextViewMyCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/lbl_zero"
            android:textColor="#FFF"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/nextButtonMyCart"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:background="@android:color/holo_green_light"
            android:gravity="center_vertical" >

            <ImageView
                android:id="@+id/icoCheckout"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_margin="2dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_checkout2" />
        </LinearLayout>
    </LinearLayout>
  
</LinearLayout>