<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_with_back" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@android:color/darker_gray" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/lbl_please_enter_phone"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center"
                    android:text="@string/lbl_phone_prefix"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/phoneNumberEditText"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                    android:hint="@string/lbl_phone_number"
                    android:inputType="number|phone"
                    android:maxLength="10"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressIndicater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:visibility="invisible" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>